--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1 class="mb-0">Robin
           <span class="text-primary">Ranjan</span>
         </h1>
-        <div class="subheading mb-5">Heßlinger Straße 14 · Wolfsburg, 38440 Germany · (+49) 171-731-9574 ·
+        <div class="subheading mb-5">(+49) 171-731-9574 ·
           <a href="mailto:name@email.com">robinranjanme@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
