--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <span class="text-primary">Ranjan</span>
         </h1>
         <div class="subheading mb-5">(+49) 171-731-9574 ·
-          <a href="mailto:name@email.com">robinranjanme@gmail.com</a>
+          <a href="mailto:robinranjanme@gmail.com">robinranjanme@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
